@@ -182,6 +182,14 @@
         layer="Products.PloneMeeting.interfaces.IPloneMeetingLayer"
         permission="zope2.View" />
 
+    <!-- the maintenance task view that update delay-aware advisers -->
+    <browser:view
+        for="Products.CMFPlone.interfaces.siteroot.IPloneSiteRoot"
+        name="update-delay-aware-advices"
+        class=".views.UpdateDelayAwareAdvicesView"
+        layer="Products.PloneMeeting.interfaces.IPloneMeetingLayer"
+        permission="cmf.ManagePortal" />
+
     <!-- this view will contains some methods doing unrestricted things.  It replaces Manager Proxy roled python Scripts -->
     <browser:page
         for="*"
