@@ -247,3 +247,23 @@ class ChangeItemOrderView(BrowserView):
                             item.setItemNumber(itemNumber-1)
 
         return tool.gotoReferer()
+
+
+class UpdateDelayAwareAdvicesView(BrowserView):
+    """
+      Thsi is a view that is called as a maintenance task by Products.cron4plone.
+      It will be launched at 0:00 each night and update advices on each items so
+      delay-aware advices that are using clear day are updated at the very beginning
+      of the day.  It will also update the indexAdvisers portal_catalog index.
+    """
+    def __call__(self):
+        """
+          Update every items adviceIndex and update portal_catalog indexAdvisers index.
+          The view itself is protected by the 'Manage portal' permission.
+        """
+        # now go on, update every items adviceIndex
+        tool = getToolByName(self.context, 'portal_plonemeeting')
+        tool._updateAllAdvices()
+        # update the indexAdvisers index
+        catalog = getToolByName(self.context, 'portal_catalog')
+        catalog.reindexIndex('indexAdvisers', None)
