@@ -7,6 +7,7 @@
     <dependency>profile-imio.actionspanel:default</dependency>
     <dependency>profile-collective.documentviewer:default</dependency>
     <dependency>profile-Products.DataGridField:default</dependency>
+    <dependency>profile-Products.cron4plone:default</dependency>
   </dependencies>
   <!-- ##/code-section METADATA -->
 </metadata>
