@@ -13,6 +13,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Moved advices from saved dict to real objects so we can add annexes into it
 - Added custom advisers management on a per MeetingConfig basis : this manage automatic advisers and delay-aware advisers
 - Added delay-aware advisers making it possible to define delay for giving an advice
+- Rely on Products.cron4plone to launch maintenance task regarding delay-aware advices
+  (update each item adviceIndex and update portal_catalog indexAdvisers index)
 
 3.1.0 (2013-11-04)
 ------------------
